fix: overflow-y scroll

--- a/app/components/Body/Body.scss
+++ b/app/components/Body/Body.scss
@@ -1,5 +1,6 @@
 .body-container {
   color: black;
+  overflow-y: scroll;
 
   .excel-table {
     border: solid 1px black;
