--- a/app/components/Home/Home.scss
+++ b/app/components/Home/Home.scss
@@ -1,4 +1,6 @@
 .home-container {
   display: flex;
   flex-direction: row;
+  width: 100vw;
+  height: 100vh;
 }
