--- a/app/components/LeftPanel/LeftPanel.scss
+++ b/app/components/LeftPanel/LeftPanel.scss
@@ -10,7 +10,10 @@
   }
 
   .add-file {
+    margin-bottom: 16px;
+
     .input-file {
+      color: black;
       margin-bottom: 8px;
     }
 
